--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.17.5",
     "eslint": "^8.8.0",
     "eslint-plugin-react": "^7.28.0",
     "eslint-config-airbnb": "^18.2.1",
